--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -27,15 +27,30 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
-                            <table class="table table-striped table-bordered table-hover">
+                            <table class="table table-striped table-bordered table-hover table-sm" style="font-size: 0.875rem;">
                                 <thead>
                                     <tr>
-                                        <th style="width: 10%;">Ticker</th>
-                                        <th style="width: 30%;">Name</th>
-                                        <th style="width: 20%;">Asset Class</th>
-                                        <th class="text-end" style="width: 13%;">Shares</th>
-                                        <th class="text-end" style="width: 13%;">Current Price</th>
-                                        <th class="text-end" style="width: 14%;">Current Value</th>
+                                        <th rowspan="2" class="align-middle" style="width: 5%;">Ticker</th>
+                                        <th rowspan="2" class="align-middle" style="width: 17%;">Name</th>
+                                        <th rowspan="2" class="align-middle" style="width: 10%;">Asset Class</th>
+                                        <th rowspan="2" class="align-middle text-end" style="width: 8%;">Price</th>
+                                        <th colspan="3" class="text-center">Shares</th>
+                                        <th colspan="3" class="text-center">Value</th>
+                                        <th colspan="3" class="text-center">Allocation %</th>
+                                    </tr>
+                                    <tr>
+                                        <!-- Shares -->
+                                        <th class="text-end" style="width: 6%;">Cur</th>
+                                        <th class="text-end" style="width: 6%;">Tgt</th>
+                                        <th class="text-end" style="width: 6%;">Var</th>
+                                        <!-- Value -->
+                                        <th class="text-end" style="width: 8%;">Cur</th>
+                                        <th class="text-end" style="width: 8%;">Tgt</th>
+                                        <th class="text-end" style="width: 8%;">Var</th>
+                                        <!-- Allocation -->
+                                        <th class="text-end" style="width: 5%;">Cur</th>
+                                        <th class="text-end" style="width: 5%;">Tgt</th>
+                                        <th class="text-end" style="width: 5%;">Var</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -47,34 +62,83 @@
                                         <td><strong>{{ holding.ticker }}</strong></td>
                                         <td>{{ holding.name }}</td>
                                         <td>{{ holding.asset_class }}</td>
-                                        <td class="text-end">{{ holding.shares|floatformat:4 }}</td>
                                         <td class="text-end">{{ holding.current_price|default:"0"|accounting_amount:2 }}</td>
+                                        
+                                        <!-- Shares -->
+                                        <td class="text-end">{{ holding.shares|floatformat:2 }}</td>
+                                        <td class="text-end">{{ holding.target_shares|floatformat:2 }}</td>
+                                        <td class="text-end">{{ holding.shares_variance|accounting_number:2 }}</td>
+
+                                        <!-- Value -->
                                         <td class="text-end">{{ holding.value|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ holding.target_value|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ holding.value_variance|accounting_amount:0 }}</td>
+                                        
+                                        <!-- Allocation -->
+                                        <td class="text-end">{{ holding.current_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ holding.target_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ holding.allocation_variance|accounting_percent:2 }}</td>
                                     </tr>
                                     {% endfor %}
                                     {% if group_data.categories|length > 1 %}
                                     <tr class="table-secondary fw-bold group-{{ forloop.parentloop.counter }}-rows collapse show">
-                                        <td colspan="5">{{ category_data.label }} Total</td>
+                                        <td colspan="4">{{ category_data.label }} Total</td>
+                                        
+                                        <!-- Shares empty -->
+                                        <td colspan="3"></td>
+
+                                        <!-- Value Total -->
                                         <td class="text-end">{{ category_data.total|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ category_data.total_target_value|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ category_data.total_value_variance|accounting_amount:0 }}</td>
+                                        
+                                        <!-- Allocation Total -->
+                                        <td class="text-end">{{ category_data.total_current_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ category_data.total_target_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ category_data.total_allocation_variance|accounting_percent:2 }}</td>
                                     </tr>
                                     {% endif %}
                                     {% endfor %}
                                     <tr class="table-primary fw-bold border-top group-toggle mt-3" data-bs-toggle="collapse"
                                         data-bs-target=".group-{{ forloop.counter }}-rows" aria-expanded="true" role="button">
-                                        <td colspan="5">{{ group_data.label|default:group_code }} Total</td>
+                                        <td colspan="4">{{ group_data.label|default:group_code }} Total</td>
+                                        
+                                        <!-- Shares empty -->
+                                        <td colspan="3"></td>
+
+                                        <!-- Value Total -->
                                         <td class="text-end">{{ group_data.total|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ group_data.total_target_value|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ group_data.total_value_variance|accounting_amount:0 }}</td>
+                                        
+                                        <!-- Allocation Total -->
+                                        <td class="text-end">{{ group_data.total_current_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ group_data.total_target_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ group_data.total_allocation_variance|accounting_percent:2 }}</td>
                                     </tr>
                                     {% endfor %}
                                     {% else %}
                                     <tr>
-                                        <td colspan="6" class="text-center">No holdings found.</td>
+                                        <td colspan="13" class="text-center">No holdings found.</td>
                                     </tr>
                                     {% endif %}
                                 </tbody>
                                 <tfoot>
                                     <tr class="table-dark fw-bold">
-                                        <td colspan="5">Grand Total</td>
+                                        <td colspan="4">Grand Total</td>
+                                        
+                                        <!-- Shares empty -->
+                                        <td colspan="3"></td>
+
+                                        <!-- Value Total -->
                                         <td class="text-end">{{ grand_total|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ grand_target_value|accounting_amount:0 }}</td>
+                                        <td class="text-end">{{ grand_value_variance|accounting_amount:0 }}</td>
+                                         
+                                         <!-- Allocation Total -->
+                                        <td class="text-end">{{ grand_current_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ grand_target_allocation|floatformat:2 }}%</td>
+                                        <td class="text-end">{{ grand_allocation_variance|accounting_percent:2 }}</td>
                                     </tr>
                                 </tfoot>
                             </table>
